contact page - validation

--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"/> <!-- Noto Sans - Open Sans Knockoff -->
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"/> <!-- Bebas Neue -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"> <!-- Noto Sans - Open Sans Knockoff -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"> <!-- Bebas Neue -->
   <title>Alan V | Contact</title>
 </head>
 <body>
@@ -38,15 +38,16 @@
         </p>
         <div class="form-area">
             <form action="thank-you.html" method="get" name="contactForm">
-                <label for="fname">Name</label><br>
+                <label>Name</label><br>
                 <input type="text" name="fullName" value="Guy Incognito"><br>
-                <label for="email">Email</label><br>
+                <label">Email</label><br>
                 <input type="text" name="email" value="test123@compuserve.net"><br>
-                <label for="comments">Comments</label><br>
-                <textarea name="comments" rows="4" value="Send me your comments and suggestions here!"></textarea><br><br>
+                <label>Comments</label><br>
+                <textarea name="comments" rows="4" ></textarea><br><br>
                 <input type="submit" value="Submit">
               </form>
         </div>
+      </div>
     </div>
   </main>
   <footer class="footer"><span>&copy; 2025 | Alan Vollmar </span></footer>
