--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -40,7 +40,7 @@
             <form action="thank-you.html" method="get" name="contactForm">
                 <label>Name</label><br>
                 <input type="text" name="fullName" value="Guy Incognito"><br>
-                <label">Email</label><br>
+                <label>Email</label><br>
                 <input type="text" name="email" value="test123@compuserve.net"><br>
                 <label>Comments</label><br>
                 <textarea name="comments" rows="4" ></textarea><br><br>
