--- a/midterm/creative.html
+++ b/midterm/creative.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"/> <!-- Noto Sans - Open Sans Knockoff -->
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"/> <!-- Bebas Neue -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"> <!-- Noto Sans - Open Sans Knockoff -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"> <!-- Bebas Neue -->
   <title>Alan V | Creative</title>
 </head>
 <body>
@@ -37,7 +37,7 @@
         Here are some goodies from my music days. Check out our old music <a href="https://open.spotify.com/album/7wV5x9kPWIlLDd4nIIivXH?si=Kwv9WoDZQ2iISa7vrx2HAg" target="_blank">HERE...</a>
       </p>
       <div class="center">
-        <iframe width="752" height="423" src="https://www.youtube.com/embed/R8yRCDZ-JIQ?si=z9PWCNRNbMrZ1URf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <!-- rather not use iframes or embeds, but the video element only supports local video files -->
+        <iframe width="752" height="423" src="https://www.youtube.com/embed/R8yRCDZ-JIQ?si=z9PWCNRNbMrZ1URf" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <!-- rather not use iframes or embeds, but the video element only supports local video files -->
       </div>
       <div class="img-gallery">
         <a href="images/music-1.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-1--thumb.jpg"></a>
