--- a/midterm/validated.html
+++ b/midterm/validated.html
@@ -117,10 +117,10 @@
       <hr class="title-underline">
 
       <div class="section-title">
-        <h2>Contact</h2>
+        <h2>Thank You</h2>
       </div>
       <div class="col-2">
-        <h3>Thank You</h3>
+        <h3>HTML</h3>
         <img class="featured-image" src="images/thank-you-html.jpg" alt="validation screenshot">
       </div>
       <div class="col-2">
