--- a/midterm/creative.html
+++ b/midterm/creative.html
@@ -1,56 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"> <!-- Noto Sans - Open Sans Knockoff -->
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"> <!-- Bebas Neue -->
-  <title>Alan V | Creative</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Creative- My Portfolio Dev 109</title>
+    <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/archivo-narrow" type="text/css">
 </head>
 <body>
-<!-- USE THIS: A boilerplate including header, menu items, and core elements for other pages. -->
-<div class="container">
-  <header class="header">
-    <div class="header-content">
-      <div class="header-logo">
-        <a href="index.html"><span>Alan Vollmar</span></a>
-      </div>
-      <menu class="header-menu">
-        <li><a href="about.html">About</a></li>
-        <li><a href="courses.html">Courses</a></li>
-        <li><a href="artifacts.html">Artifacts</a></li>
-        <li><a href="modules.html">Modules</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a class="active" href="creative.html">Creative</a></li>
-        <li><a href="validated.html">Validation</a></li>
-      </menu>
-    </div>
-  </header>
-  <main class="page-body">
-    <div class="wrapper">
-      <h1>So I Made Music Once...</h1>
-      <hr class="title-underline">
-      <h2>Here are some nuggets from a younger me</h2>
-      <p>
-        Back when I was a younger man, I put life on hold to pursue a career in music. Unfortunately, things didn't line up perfectly. Close, but no cigar.<br>
-        Here are some goodies from my music days. Check out our old music <a href="https://open.spotify.com/album/7wV5x9kPWIlLDd4nIIivXH?si=Kwv9WoDZQ2iISa7vrx2HAg" target="_blank">HERE...</a>
-      </p>
-      <div class="center">
-        <iframe width="752" height="423" src="https://www.youtube.com/embed/R8yRCDZ-JIQ?si=z9PWCNRNbMrZ1URf" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <!-- rather not use iframes or embeds, but the video element only supports local video files -->
-      </div>
-      <div class="img-gallery">
-        <a href="images/music-1.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-1--thumb.jpg"></a>
-        <a href="images/music-2.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-2--thumb.jpg"></a>
-        <a href="images/music-3.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-3--thumb.jpg"></a>
-        <a href="images/music-4.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-4--thumb.jpg"></a>
-        <p><em>Click to view larger version.</em></p>
-      </div>
-      <div class="clearfix"></div>
-    </div>
-  </main>
-  <footer class="footer"><span>&copy; 2025 | Alan Vollmar </span></footer>
-</div>
-
+    <!-- Navigation Section -->
+    <nav class="navbar">
+        <div class="nav-brand">Natalia Lubskaya-Dev 109</div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="artifacts.html">Artifacts</a></li>
+            <li><a href="modules.html">Modules</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="creative.html" class="active">Creative</a></li>
+            <li><a href="validation.html">Validation</a></li>
+        </ul>
+    </nav>
+    <!-- Main Content -->
+    <main class="main-content">
+        <div class="content-container">
+            <h1>Hobbies and Other Experiences Life Gifted</h1>
+            <!-- Example Content -->
+            <section class="content-section">
+			<h2>A Little of Both</h2>
+                <p>I will not list all my hobbies but one, I used to enjoy in my earlier days speedskating.  After doing it for a long time, it becomes a second nature and experience that stays with you.  The flow people get from activity is just a part of it, and you are one with speed and ice.  <br>
+Here are a couple photos of my teammates and other authlets and link to the video to one of the clips.
+<br>
+To read more visit <a href="https://en.wikipedia.org/wiki/Speed_skating" target="_blank">Wikipedia</a>
+</p>
+            </section>
+            
+            <section class="content-section">
+                <h2>Photos</h2>
+				<img class="artImage2" alt="Photo of speedskating" src="images/speed1.png">
+				<img class="artImage2" alt="Photo of speedskating" src="images/speed2.png">
+				<img class="artImage2" alt="Photo of speedskating" src="images/speed3.png">
+				<img class="artImage2" alt="Photo of speedskating" src="images/speed4.png">
+				<h2>Video</h2>      <div class="center">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/V80vGfzHYlQ" title="Irkutsk. Russian speed skating allround/sprint Championship." allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
+				Video courtesy of Artem Zolotarev on YouTube</div>
+            </section>
+        </div>
+    </main>
+    <!-- Footer -->
+    <footer>
+<br>
+		<div class="foot-links">
+            <a href="home.html">Home</a> |
+            <a href="about.html">About</a> |
+            <a href="courses.html">Courses</a> |
+            <a href="artifacts.html">Artifacts</a> |
+            <a href="modules.html">Modules</a> |
+            <a href="contact.html">Contact</a> |
+            <a href="creative.html">Creative</a> |
+            <a href="validation.html">Validation</a> |
+        <br>© 2025 My Portfolio. All rights reserved.
+		</div>
+    </footer>
 </body>
 </html>
