--- a/midterm/courses.html
+++ b/midterm/courses.html
@@ -1,111 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Courses - My Portfolio Dev 109</title>
-    <link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/archivo-narrow" type="text/css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"> <!-- Noto Sans - Open Sans Knockoff -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"> <!-- Bebas Neue -->
+  <title>Alan V | Courses</title>
 </head>
 <body>
-    <!-- Navigation Section -->
-    <nav class="navbar">
-        <div class="nav-brand">Natalia Lubskaya-Dev 109</div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="courses.html" class="active">Courses</a></li>
-            <li><a href="artifacts.html">Artifacts</a></li>
-            <li><a href="modules.html">Modules</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="creative.html">Creative</a></li>
-            <li><a href="validation.html">Validation</a></li>
-        </ul>
-    </nav>
-    <!-- Main Content -->
-    <main class="main-content">
-        <div class="content-container">
-            <h1>Courses</h1>
-            <p>This semester I somehow end up with more classes then I planned, so the list is a remind to myself, 
-			not to feel bed for the class and drop extra class next time.</p>
-            <!-- Example Content -->
-            <section class="content-section">
-                <h2>Intro to Web Dev</h2>
-				<strong>Dev109 | Adam Brehm</strong><br>
-				<a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=57598" target="_blank">Course detailes</a>
-                 <p>What did you know before this class?<br>
-				Before taking the class, I had a general understanding of: Basic HTML and CSS for creating simple web pages.
-				I never use JavaScript. Had some awareness of web browsers, and SEO.  However have not used any of those knowledge. 
-				</p><p>What knowledge/skills did you gain after this class? <br>
-				Working with git, updated HTML knowledge, learn CSS and JavaScript basic and use all three in the webpage.  
-				</p>
-            </section>
-            
-            <section class="content-section">
-                <h2>Intro to Python Programming</h2>
-				<strong>Dev109 | Dena Laney </strong><br>
-				<a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=58000" target="_blank">Course detailes</a>
-                <p>What did you know before this class?<br>
-				I knew nothing about Python. It is like learning ABC.  
-				My knowledge of programming was nearly nonexistent. I had heard of programming. 
-				languages like Python and knew it was used to create software and applications, 
-				but the concept felt abstract and intimidating</p>
-				<p>What knowledge/skills did you gain after this class?<br>
-				I get concept of the vast majority of its use and 
-				<br>
-				I wish I could say that I became proficient in using variables to store and manipulate data, 
-				and how they affect operations in a program. <br>
-				Reality is that I see how much I don't know, how advance Python is and continuously evolving with the speed of light.
-				Not sure I can keep up with this 'fast moving train'. 
-				</p>	
+<!-- USE THIS: A boilerplate including header, menu items, and core elements for other pages. -->
+<div class="container">
+  <header class="header">
+    <div class="header-content">
+      <div class="header-logo">
+        <a href="index.html"><span>Alan Vollmar</span></a>
+      </div>
+      <menu class="header-menu">
+        <li><a href="about.html">About</a></li>
+        <li><a class="active" href="courses.html">Courses</a></li>
+        <li><a href="artifacts.html">Artifacts</a></li>
+        <li><a href="modules.html">Modules</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="creative.html">Creative</a></li>
+        <li><a href="validated.html">Validation</a></li>
+      </menu>
+    </div>
+  </header>
+  <main class="page-body">
+    <div class="wrapper">
+      <h1>Courses</h1>
+      <hr class="title-underline">
+      <section>
+        <h2>Intro to Web Dev</h2>
+        <p>
+        <strong>DEV109 | Adam Brehm</strong><br>
+        <a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=57598" target="_blank">Learn More...</a>
+        </p>
+        <h3>Experience & What to Gain</h3>
 
-				</section>
-				
-			<section class="content-section">
-                <h2>SQL Fundamentals</h2>
-				<strong>BUSIT 103| Lisa Harris</strong><br>
-				<a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=56092" target="_blank">Course detailes</a>
-				<p>What did you know before this class?<br>
-				 My understanding of databases was limited, and my SQL skills are basic. 
-				 I knew databases were crucial for storing and managing data, and I had little experience with basic queries.
-				</p>
-				<p>What knowledge/skills did you gain after this class?<br>
-				I gained hands on experience of pulling data base on parameters, understanding better structure and how to access and manipulate the results.
-				I like the simple logic of SQL, hoping to learn more with practical implementation into other areas of analytics and reporting.
+        <p>
+        I've spent over 10 years in marketing for multiple B2B SaaS solutions, mainly in the MSP space, both as a vendor and a solution. Managing multiple sites on different CMS has helped me learn the ins and outs of both content management and front-end development.
+        </p>
+        <p>
+          I plan to walk away from this class with a formal experience in learning the fundamentals of Web Development, as my experience has mainly been through my career. There's plenty I've missed that I could learn from this course.
+        </p>
+        <hr class="title-underline">
+      </section>
+      <section>
+        <h2>The Research Paper</h2>
+        <p>
+        <strong>ENGL201 | Sarah Ghasedi</strong><br>
+        <a href="http://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=56611&" target="_blank">Learn More...</a>
+        </p>
+      <h3>Experience & What to Gain</h3>
+        <p>
+        While I'm comfortable with a more informal narrative writing style, I'd like to lean more into scholarly papers to hone my professional writing skills.
+        </p>
+        <p>
+        Ideally, I plan to gain confidence writing professional content for marketing collateral, sales resources, and vetted website content.
+        </p>
+        <hr class="title-underline">
+      </section>
+      <section>
+        <h2>Intermediate Algebra</h2>
+        <p>
+        <strong>MATH99 | Helene Tate</strong><br>
+        <a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=12&coid=48945" target="_blank">Learn More...</a>
+        </p>
+        <h3>Experience & What to Gain</h3>
+        <p>
+        Aside from development work, I've neglected my math skills since my early college days from over a decade ago. Amazing how much of it is actually applied in the workplace, as this has affected some of my work.
+        </p>
+        <p>
+        I'm looking forward to gaining the core skills required for more rigorous development work, such a larger development projects, including web apps build on popular frameworks I'be yet to get familiar with.
+        </p>
+        <hr class="title-underline">
+      </section>
+    </div>
+  </main>
+  <footer class="footer"><span>&copy; 2025 | Alan Vollmar </span></footer>
+</div>
 
-				</p>
-				</section>
-			<section class="content-section">
-                <h2>Modern Marketing Principles</h2><br>
-				<strong>MKTG 101 | Vickie Tyler Carnegie, JD, PhD</strong><br>
-				<a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=57129" target="_blank">Course detailes</a>
-                <p>What did you know before this class?<br>
-				I knew that marketing involved promoting products and services to attract customers, 
-				and I had a general idea of traditional marketing methods strategically and analytically. 
-				aspects of marketing, as well as understanding the modern digital techniques used by businesses today.  
-				I never worked in an area beyond designing flyers. </p>
-				<p>
-				What knowledge/skills did you gain after this class?
-				I am learning about the foundation in marketing and how much goes into consideration on how best to 
-				reach to buyer and point of not being aware of the product or service to the point of selling on to them.
-				</p>
-				</section>
-        </div>
-    </main>
-
-    <!-- Footer -->
-    <footer>
-        <br><div class="foot-links">
-            <a href="home.html">Home</a> |
-            <a href="about.html">About</a> |
-            <a href="courses.html">Courses</a> |
-            <a href="artifacts.html">Artifacts</a> |
-            <a href="modules.html">Modules</a> |
-            <a href="contact.html">Contact</a> |
-            <a href="creative.html">Creative</a> |
-            <a href="validation.html">Validation</a> |
-        <br>© 2025 My Portfolio. All rights reserved.
-	</div>
-    </footer>
 </body>
 </html>
