--- a/midterm/artifacts.html
+++ b/midterm/artifacts.html
@@ -22,7 +22,7 @@
         <li><a class="active" href="artifacts.html">Artifacts</a></li>
         <li><a href="modules.html">Modules</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="creative.html">Creative</a></li>
+        <li><a href="creative.html">My Music</a></li>
         <li><a href="validated.html">Validation</a></li>
       </menu>
     </div>
