--- a/m08/index.html
+++ b/m08/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Alan Vollmar - M08</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="js/scripts.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
