--- a/m08/index.html
+++ b/m08/index.html
@@ -10,6 +10,12 @@
       <h1 id="header">List</h1>
       <h2>Buy groceries</h2>
       <ul id="todo"><li id="one" class="hot"><em>fresh</em> figs</li><li id="two" class="hot">pine nuts</li><li id="three" class="hot">honey</li><li id="four">balsamic vinegar</li></ul>
+      <div id="addItem">
+        <form class="addItemForm" action="return false;">
+            <input type="text" placeholder="Add Item...">
+            <button type="submit" onclick="DO FUNCTION">Submit</button>
+        </form>
+      </div>
     </div>
     <script src="js/scripts.js"></script>
   </body>
