--- a/m08/index.html
+++ b/m08/index.html
@@ -11,7 +11,7 @@
       <h2>Buy groceries</h2>
       <ul id="todo"><li id="one" class="hot"><em>fresh</em> figs</li><li id="two" class="hot">pine nuts</li><li id="three" class="hot">honey</li><li id="four">balsamic vinegar</li></ul>
       <div id="addItem">
-        <form class="addItemForm" action="return false;">
+        <form class="addItemForm" action="" onsubmit="return false;">
             <input id="itemInput" type="text" placeholder="Add Item...">
             <button type="submit" onclick='addListItem(document.getElementById("itemInput").value)'>Submit</button>
         </form>
