--- a/a4/index.html
+++ b/a4/index.html
@@ -340,7 +340,8 @@
                 <input id="zipCode" type="number" name="zipCode" maxlength="5"><br/>
 
                 <label for="comments">Comments</label><br/>
-                <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Add comments here..."></textarea> 
+                <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Add comments here..."></textarea>
+                <button id="submitButton">Submit</button>
             </form>
         </div>
     </div>
