--- a/a4/index.html
+++ b/a4/index.html
@@ -11,7 +11,7 @@
         <div class="form-wrapper">
             <form id="validationForm" action="" onsubmit="return false;">
                 <label for="firstName">First Name</label><br/>
-                <input id="firstName" type="text" name="firstName" maxlength="20"><br/>
+                <input id="firstName" type="text" name="firstName" maxlength="20" placeholder="First Name"><br/>
 
                 <label for="lastName">Last Name</label><br/>
                 <input id="lastName" type="text" name="lastName" maxlength="20"><br/>
