error message span

--- a/a4/index.html
+++ b/a4/index.html
@@ -12,6 +12,7 @@
             <form id="validationForm" action="" onsubmit="return false;">
                 <label for="firstName">First Name</label><br/>
                 <input id="firstName" type="text" name="firstName" maxlength="20" placeholder="First Name"><br/>
+                <span class="errorMessage"></span>
 
                 <label for="lastName">Last Name</label><br/>
                 <input id="lastName" type="text" name="lastName" maxlength="20"><br/>
