--- a/a4/index.html
+++ b/a4/index.html
@@ -12,29 +12,36 @@
             <form id="validationForm" action="" onsubmit="return false;">
                 <label for="firstName">First Name</label><br/>
                 <input id="firstName" type="text" name="firstName" maxlength="20" placeholder="First Name"><br/>
-                <span class="errorMessage"></span>
+                <span  id="firstName-error" class="errorMessage"></span>
 
                 <label for="lastName">Last Name</label><br/>
                 <input id="lastName" type="text" name="lastName" maxlength="20"><br/>
+                <span  id="lastName-error" class="errorMessage"></span>
 
                 <label for="userEmail">Email</label><br/>
                 <input id="userEmail" type="email" name="userEmail"><br/>
+                <span  id="firstName-error" class="errorMessage"></span>
 
                 <label for="phone">Phone</label><br/>
                 <input id="phone" type="tel" name="phone" maxlength="15"><br/>
+                <span  id="phone-error" class="errorMessage"></span>
 
                 <label for="userName">User Name</label><br/>
                 <input id="userName" type="text" name="userName" maxlength="12"><br/>
+                <span  id="userName-error" class="errorMessage"></span>
 
                 <label for="password">Password</label><br/>
                 <input id="password" type="password" name="password" maxlength="7"><br/>
+                <span  id="password-error" class="errorMessage"></span>
 
                 <label for="address">Address</label><br/>
                 <input id="address" type="text" name="address"><br/>
+                <span  id="address-error" class="errorMessage"></span>
 
                 <label for="cityName">City</label><br/>
                 <input id="cityName" type="text" name="cityName"><br/>
-            
+                <span  id="cityName-error" class="errorMessage"></span>
+
                 <label for="stateName">State</label><br/>
                 <select id="stateName" name="stateName">
                     <option value="AL">Alabama</option>
@@ -89,6 +96,7 @@
                     <option value="WI">Wisconsin</option>
                     <option value="WY">Wyoming</option>
                 </select>
+                <span  id="stateName-error" class="errorMessage"></span>
 
                 <label for="countryName">Country</label><br/>
                 <select id="countryName" name="countryName">
@@ -337,15 +345,19 @@
                     <option value="Zambia">Zambia</option>
                     <option value="Zimbabwe">Zimbabwe</option>
                 </select>
+                <span  id="countryName-error" class="errorMessage"></span>
 
                 <label for="zipCode">Zipcode</label><br/>
                 <input id="zipCode" type="number" name="zipCode" maxlength="5"><br/>
+                <span  id="zipCode-error" class="errorMessage"></span>
 
                 <label for="comments">Comments</label><br/>
                 <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Add comments here..."></textarea>
+                <span  id="comments-error" class="errorMessage"></span>
                 <button id="submitButton">Submit</button>
             </form>
         </div>
     </div>
+    <script href="js/scripts.js"></script>
 </body>
 </html>
