--- a/a4/index.html
+++ b/a4/index.html
@@ -348,7 +348,7 @@
                 <span  id="countryName-error" class="errorMessage"></span>
 
                 <label for="zipCode">Zipcode</label><br/>
-                <input id="zipCode" type="number" name="zipCode" maxlength="5" required><br/>
+                <input id="zipCode" type="number" name="zipCode" maxlength="5"><br/>
                 <span  id="zipCode-error" class="errorMessage"></span>
 
                 <label for="comments">Comments</label><br/>
