--- a/a4/index.html
+++ b/a4/index.html
@@ -11,35 +11,35 @@
         <div class="form-wrapper">
             <form id="validationForm" action="" onsubmit="return false;">
                 <label for="firstName">First Name</label><br/>
-                <input id="firstName" type="text" name="firstName" maxlength="20" placeholder="First Name" required><br/>
+                <input id="firstName" type="text" name="firstName" maxlength="20" placeholder="First Name" required>
                 <span  id="firstName-error" class="errorMessage"></span>
 
                 <label for="lastName">Last Name</label><br/>
-                <input id="lastName" type="text" name="lastName" maxlength="20" required><br/>
+                <input id="lastName" type="text" name="lastName" maxlength="20" required>
                 <span  id="lastName-error" class="errorMessage"></span>
 
                 <label for="userEmail">Email</label><br/>
-                <input id="userEmail" type="email" name="userEmail" required><br/>
+                <input id="userEmail" type="email" name="userEmail" required>
                 <span  id="firstName-error" class="errorMessage"></span>
 
                 <label for="phone">Phone</label><br/>
-                <input id="phone" type="tel" name="phone" maxlength="15" required><br/>
+                <input id="phone" type="tel" name="phone" maxlength="15" required>
                 <span  id="phone-error" class="errorMessage"></span>
 
                 <label for="userName">User Name</label><br/>
-                <input id="userName" type="text" name="userName" maxlength="12" required><br/>
+                <input id="userName" type="text" name="userName" maxlength="12" required>
                 <span  id="userName-error" class="errorMessage"></span>
 
                 <label for="password">Password</label><br/>
-                <input id="password" type="password" name="password" maxlength="7" required><br/>
+                <input id="password" type="password" name="password" maxlength="7" required>
                 <span  id="password-error" class="errorMessage"></span>
 
                 <label for="address">Address</label><br/>
-                <input id="address" type="text" name="address" required><br/>
+                <input id="address" type="text" name="address" required>
                 <span  id="address-error" class="errorMessage"></span>
 
                 <label for="cityName">City</label><br/>
-                <input id="cityName" type="text" name="cityName" required><br/>
+                <input id="cityName" type="text" name="cityName" required>
                 <span  id="cityName-error" class="errorMessage"></span>
 
                 <label for="stateName">State</label><br/>
@@ -348,12 +348,12 @@
                 <span  id="countryName-error" class="errorMessage"></span>
 
                 <label for="zipCode">Zipcode</label><br/>
-                <input id="zipCode" type="number" name="zipCode" maxlength="5"><br/>
+                <input id="zipCode" type="number" name="zipCode" maxlength="5">
                 <span  id="zipCode-error" class="errorMessage"></span>
 
                 <label for="comments">Comments</label><br/>
                 <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Add comments here..."></textarea>
-                <span  id="comments-error" class="errorMessage"></span>
+                <span id="comments-error" class="errorMessage"></span>
                 <button id="submitButton">Submit</button>
             </form>
         </div>
