--- a/a4/index.html
+++ b/a4/index.html
@@ -354,7 +354,7 @@
                 <label for="comments">Comments</label><br/>
                 <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Add comments here..."></textarea>
                 <span id="comments-error" class="errorMessage"></span>
-                <button id="submitButton">Submit</button>
+                <button id="submitButton" onclick="validateForm();">Submit</button>
             </form>
         </div>
     </div>
