--- a/a4/index.html
+++ b/a4/index.html
@@ -358,6 +358,6 @@
             </form>
         </div>
     </div>
-    <script href="js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
