--- a/a4/index.html
+++ b/a4/index.html
@@ -352,7 +352,7 @@
                 <span  id="zipCode-error" class="errorMessage"></span>
 
                 <label for="comments">Comments</label><br/>
-                <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Add comments here..."></textarea>
+                <textarea id="comments" name="comments" rows="4" cols="50" placeholder="(Optional) Add comments here..."></textarea>
                 <span id="comments-error" class="errorMessage"></span>
                 <button id="submitButton" onclick="validateForm();">Submit</button>
             </form>
