--- a/a4/index.html
+++ b/a4/index.html
@@ -354,7 +354,7 @@
 
                 <label for="zipCode">Zipcode</label><br/>
                 <span id="zipCode-error" class="errorMessage"></span>
-                <input id="zipCode" type="number" name="zipCode" maxlength="5">
+                <input id="zipCode" type="number" name="zipCode" max="99999">
                 
 
                 <label for="comments">Comments</label><br/>
