remove labele line breaks

--- a/a4/index.html
+++ b/a4/index.html
@@ -13,41 +13,41 @@
     <div id="container">
         <div class="form-wrapper">
             <form id="validationForm" method="get" action="thank-you.html" onsubmit="return validateForm();">
-                <label for="firstName">First Name</label><br/>
+                <label for="firstName">First Name</label>
                 <span id="firstName-error" class="errorMessage"></span>
                 <input id="firstName" type="text" name="firstName" maxlength="20" required>
                 
 
-                <label for="lastName">Last Name</label><br/>
+                <label for="lastName">Last Name</label>
                 <input id="lastName" type="text" name="lastName" maxlength="20" required>
                 <span id="lastName-error" class="errorMessage"></span>
 
 
-                <label for="userEmail">Email</label><br/>
+                <label for="userEmail">Email</label>
                 <input id="userEmail" type="email" name="userEmail" required>
                 <span id="userEmail-error" class="errorMessage"></span>
 
-                <label for="phone">Phone</label><br/>
+                <label for="phone">Phone</label>
                 <input id="phone" type="tel" name="phone" maxlength="16" required>
                 <span id="phone-error" class="errorMessage"></span>
 
-                <label for="userName">User Name</label><br/>
+                <label for="userName">User Name</label>
                 <input id="userName" type="text" name="userName" maxlength="12" required>
                 <span id="userName-error" class="errorMessage"></span>
 
-                <label for="password">Password</label><br/>
+                <label for="password">Password</label>
                 <input id="password" type="password" name="password" maxlength="7" required>
                 <span id="password-error" class="errorMessage"></span>
 
-                <label for="address">Address</label><br/>
+                <label for="address">Address</label>
                 <input id="address" type="text" name="address" required>
                 <span id="address-error" class="errorMessage"></span>
 
-                <label for="cityName">City</label><br/>
+                <label for="cityName">City</label>
                 <input id="cityName" type="text" name="cityName" required>
                 <span id="cityName-error" class="errorMessage"></span>
 
-                <label for="stateName">State</label><br/>
+                <label for="stateName">State</label>
                 <select id="stateName" name="stateName" required>
                     <option value="AL">Alabama</option>
                     <option value="AK">Alaska</option>
@@ -103,7 +103,7 @@
                 </select>
                 <span id="stateName-error" class="errorMessage"></span>
 
-                <label for="countryName">Country</label><br/>
+                <label for="countryName">Country</label>
                 <select id="countryName" name="countryName" required>
                     <option value="United States" selected="selected">United States</option>
                     <option value="Afghanistan">Afghanistan</option>
@@ -352,12 +352,12 @@
                 </select>
                 <span id="countryName-error" class="errorMessage"></span>
 
-                <label for="zipCode">Zipcode</label><br/>
+                <label for="zipCode">Zipcode</label>
                 <input id="zipCode" type="number" name="zipCode" min="10000" max="99999">
                 <span id="zipCode-error" class="errorMessage"></span>
 
 
-                <label for="comments">Comments</label><br/>
+                <label for="comments">Comments</label>
                 <textarea id="comments" name="comments" rows="4" cols="50" placeholder="(Optional) Add comments here..."></textarea>
                 <span id="comments-error" class="errorMessage"></span>
                 <button id="submitButton" stype="submit">Submit</button>
