--- a/a4/index.html
+++ b/a4/index.html
@@ -351,7 +351,7 @@
                 <span id="countryName-error" class="errorMessage"></span>
 
                 <label for="zipCode">Zipcode</label>
-                <input id="zipCode" type="number" name="zipCode" min="10000" max="99999">
+                <input id="zipCode" type="number" name="zipCode" min="10000" max="99999" required>
                 <span id="zipCode-error" class="errorMessage"></span>
 
 
