thank you cleanup

--- a/a4/thank-you.html
+++ b/a4/thank-you.html
@@ -10,7 +10,11 @@
     <title>a4 Thank You - Alan Vollmar</title>
 </head>
 <body>
-<h1>Submission Successful!</h1>
-<h3>Thanks, Pal</h3>
+    <div id="container">
+        <div class="submission-wrapper">
+        <h1>Submission Successful!</h1>
+        <h3>Thanks, Pal</h3>
+        </div>
+    </div>
 </body>
 </html>
