--- a/m06/index.html
+++ b/m06/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="Brief description explaining the project"> <!-- TODO: Add description based on which project the group decides on -->
+  <link rel="stylesheet" href="css/style.css">
   <title>M06 - Group Project (TBD)</title>
 </head>
 <body>
