dice display testing

--- a/m06/index.html
+++ b/m06/index.html
@@ -12,6 +12,12 @@
   <div class="single-die">
     <div class="result-number">20</div>
   </div>
+  <div class="single-die">
+    <div class="result-number one-digit">3</div>
+  </div>
+  <div class="single-die">
+    <div class="result-number two-digit">15</div>
+  </div>
 
 </body>
 </html>
