--- a/m06/index.html
+++ b/m06/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="single-die">
-    <div class="result-number">20</div>
+    <div class="result-number two-digit">20</div>
   </div>
   <div class="single-die">
     <div class="result-number one-digit">3</div>
