dice display testing

--- a/m06/index.html
+++ b/m06/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-  <div class="single-die">
+  <div class="d20-dice">
     <div class="result-number two-digit">20</div>
   </div>
-  <div class="single-die">
+  <div class="d10-dice">
     <div class="result-number one-digit">3</div>
   </div>
-  <div class="single-die">
+  <div class="single-dice">
     <div class="result-number two-digit">15</div>
   </div>
 
