--- a/m06/index.html
+++ b/m06/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="Brief description explaining the project"> <!-- TODO: Add description based on which project the group decides on -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"/>
   <title>M06 - Group Project (TBD)</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
   <div class="d10-dice">
     <div class="result-number one-digit">3</div>
   </div>
-  <div class="single-dice">
+  <div class="d20-dice">
     <div class="result-number two-digit">15</div>
   </div>
 
