--- a/m09/index.html
+++ b/m09/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>M09 | Alan Vollmar</title>
   <link rel="stylesheet" href="css/style.css">
-  <script href="js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
 </head>
 <body>
 <button>Clear</button>
