--- a/m09/index.html
+++ b/m09/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 <button>Clear</button>
+<label>Color</label>
+<select>
+    <option value="blue">Blue</option>
+    <option value="green">Green</option>
+    <option value="red">red</option>
+</select>
 <script src="js/scripts.js"></script>
 </body>
 </html>
