--- a/m09/index.html
+++ b/m09/index.html
@@ -10,7 +10,7 @@
 <body>
 <button>Clear</button>
 <label>Color</label>
-<select>
+<select id="colorChoice">
     <option value="blue">Blue</option>
     <option value="green">Green</option>
     <option value="red">red</option>
