--- a/m09/index.html
+++ b/m09/index.html
@@ -15,6 +15,7 @@
     <option value="green">Green</option>
     <option value="red">red</option>
 </select>
+<input type="range" min="8" max="46" value="8" id="sizeSlider">
 <script src="js/scripts.js"></script>
 </body>
 </html>
