--- a/m09/index.html
+++ b/m09/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="container">
-        <label>Color</label><br/>
+        <label>Color </label>
         <select id="colorChoice">
             <option value="blue">Blue</option>
             <option value="green">Green</option>
             <option value="red">red</option>
-        </select>
-        <label>Size</label><br/>
+        </select><br/>
+        <label>Size </label>
         <input type="range" min="8" max="46" value="8" id="sizeSlider" oninput="this.nextElementSibling.value = this.value">
-        <output>8</output>
+        <output>8</output><br/>
         <button>Clear</button>
         <script src="js/scripts.js"></script>
     </div>
