--- a/a5/index.html
+++ b/a5/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="cs/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>A5 - Carousel | Alan Vollmar</title>
 </head>
 <body>
