--- a/a5/index.html
+++ b/a5/index.html
@@ -7,14 +7,17 @@
   <title>A5 - Carousel | Alan Vollmar</title>
 </head>
 <body>
-    <h1>Slideshow</h1> 
-    <input id="auto" type="checkbox">Run automatically
-    <br><br> 
-    <img id="slideshow" src="images/slideshow-1.jpg" width="960" height="540" alt="Cat Drawings">
-    <p id="caption">The Cats</p> 
-    <button id="previous">PREVIOUS</button>
-    <button id="next">NEXT</button> 
-
-    <script src="js/scripts.js"></script>
+  <div class="container">
+    <div id="slideshow">
+      <h1>Slideshow</h1> 
+      <input id="auto" type="checkbox"><span>Run automatically</span>
+      <br><br> 
+      <img id="slideshow" src="images/slideshow-1.jpg" width="960" height="540" alt="Cat Drawings">
+      <p id="caption">The Cats</p> 
+      <button id="previous">PREVIOUS</button>
+      <button id="next">NEXT</button>
+    </div>
+  </div>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
