--- a/a5/index.html
+++ b/a5/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <div id="slideshow">
+    <div id="slideshow-wrapper">
       <h1>Slideshow</h1> 
       <input id="auto" type="checkbox"><span>Run automatically</span>
       <br><br> 
