--- a/a5/index.html
+++ b/a5/index.html
@@ -13,9 +13,11 @@
       <input id="auto" type="checkbox"><span>Run automatically</span>
       <br><br> 
       <img id="slideshow" src="images/slideshow-1.jpg" width="960" height="540" alt="Cat Drawings">
-      <p id="caption">The Cats</p> 
-      <button id="previous">PREVIOUS</button>
-      <button id="next">NEXT</button>
+      <p id="caption">The Cats</p>
+      <div class="button-wrapper">
+        <button id="previous">PREVIOUS</button>
+        <button id="next">NEXT</button>
+      </div>
     </div>
   </div>
   <script src="js/scripts.js"></script>
