--- a/a5/index.html
+++ b/a5/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/avrile-sans-ui" type="text/css"/>
   <title>A5 - Carousel | Alan Vollmar</title>
 </head>
 <body>
