--- a/a5/index.html
+++ b/a5/index.html
@@ -17,7 +17,9 @@
         <button id="previous">PREVIOUS</button>
         <button id="next">NEXT</button>
       </div>
-      <input id="auto" type="checkbox"><span>Run automatically</span>
+      <div class="run-auto">
+        <input id="auto" type="checkbox"><span>Run automatically</span>
+      </div>
     </div>
   </div>
   <script src="js/scripts.js"></script>
