--- a/a5/index.html
+++ b/a5/index.html
@@ -21,8 +21,8 @@
         <button id="next">NEXT</button>
       </div>
       <div class="validators">
-        <a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88"></a>
-        <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Favollmar-bc.github.io%2Fdev109%2Fa5%2Findex.html" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88"></a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Favollmar-bc.github.io%2Fdev109%2Fa5%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a>
       </div>
     </div>
   </div>
