--- a/a4/index.html
+++ b/a4/index.html
@@ -46,7 +46,7 @@
                 <span id="cityName-error" class="errorMessage"></span>
 
                 <label for="stateName">State</label>
-                <select id="stateName" name="stateName" required>
+                <select id="stateName" name="stateName">
                     <option value="AL">Alabama</option>
                     <option value="AK">Alaska</option>
                     <option value="AZ">Arizona</option>
@@ -358,9 +358,13 @@
                 <label for="comments">Comments</label>
                 <textarea id="comments" name="comments" rows="4" cols="50" placeholder="(Optional) Add comments here..."></textarea>
                 <span id="comments-error" class="errorMessage"></span>
-                <button id="submitButton" stype="submit">Submit</button>
+                <button id="submitButton" type="submit">Submit</button>
             </form>
         </div>
+        <div class="validators">
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Favollmar-bc.github.io%2Fdev109%2Fa4%2Findex.html" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88"></a>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Favollmar-bc.github.io%2Fdev109%2Fa4%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a>
+         </div>
     </div>
     <script src="js/scripts.js"></script>
 </body>
