--- a/a4/index.html
+++ b/a4/index.html
@@ -47,6 +47,7 @@
 
                 <label for="stateName">State</label>
                 <select id="stateName" name="stateName">
+                    <option value="">Choose your state</option>
                     <option value="AL">Alabama</option>
                     <option value="AK">Alaska</option>
                     <option value="AZ">Arizona</option>
