--- a/a4/index.html
+++ b/a4/index.html
@@ -46,7 +46,7 @@
                 <span id="cityName-error" class="errorMessage"></span>
 
                 <label for="stateName">State</label>
-                <select id="stateName" name="stateName">
+                <select id="stateName" name="stateName" required>
                     <option value="">Choose your state</option>
                     <option value="AL">Alabama</option>
                     <option value="AK">Alaska</option>
