--- a/a4/index.html
+++ b/a4/index.html
@@ -104,6 +104,7 @@
 
                 <label for="countryName">Country</label>
                 <select id="countryName" name="countryName" required>
+                    <option value="">Choose your country</option>
                     <option value="United States" selected="selected">United States</option>
                     <option value="Afghanistan">Afghanistan</option>
                     <option value="Åland Islands">Åland Islands</option>
